--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -43,12 +43,12 @@
     <div class="col-xs-3 col-xs-offset-1">
         <img src="assets/img/phlbikeco.png">
     </div>
-    <div class="col-xs-8">
+    <div class="col-xs-8" style="padding-top:5px">
         <input id="username" type="text" class="form-control" value="" placeholder="username" autocapitalize="off">
         <br>
         <input id="password" type="password" class="form-control" value="" placeholder="password">
         <br>
-        <input type="button" id="btn-login" class="btn btn-default" onclick="login()" value="Log In">
+        <input type="button" id="btn-login" class="btn btn-primary" onclick="login()" value="Log In">
         <br><br>
         <div id="err-login" class="alert alert-danger" style="display:none"></p>
         </form>
@@ -72,20 +72,16 @@
 
 <script id="tpl-upcoming" type="text/template">
     <div class="row">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-10 col-md-offset-1" style="padding-bottom: 10px">
             {{#appointment_set.length}}
             <h3 class="topcoat-list__header">{{appointment_set.length}} Appointments</h3>
             {{/appointment_set.length}}
-            <ul class="topcoat-list__container">
                 {{#appointment_set}}
-                <li class="topcoat-list__item clickable">
-                    <a href="#appt/{{id}}">{{location.name}}</a>
-                </li>
+                    <a href="#appt/{{id}}">{{location.name}}</a><br>
                 {{/appointment_set}}
                 {{^appointment_set}}
                 No scheduled sessions
-                {{/appointment_set}}
-            </ul>
+            {{/appointment_set}}
         </div>
     </div>
 </script>
@@ -93,9 +89,19 @@
 
 <script id="tpl-appt" type="text/template">
 <div class="row">
-    <div class="col-xs-10 offset-xs-1 text-center">
-        <input type="button" class="btn btn-default" onclick="window.location.replace('#home')" value="&laquo;&nbsp;Home">
-        <h3 class="topcoat-list__header">{{location.name}}</h3>
+    <div class="col-md-10 offset-md-1 text-center">
+        <div class="row">
+            <span class="col-md-4">
+                <input type="button" class="btn btn-primary" onclick="window.location.replace('#home')" value="&laquo;&nbsp;Home">
+            </span>
+            <span class="col-md-8">
+                <h3>{{location.name}}</h3>
+            </span>
+        </div>
+        <a href="javascript:startSession({{id}})">Start Recording</a>
+        <div style="width:100%;height:300px">
+            <div style="width:100%;height:100%;" id="map"></div>
+        </div>
             <!--
             <table>
                 <tr>
@@ -107,10 +113,7 @@
                 </tr>
             </table>
             -->
-        <a href="javascript:startSession({{id}})">Start Recording</a>
-        <div style="width:100%;height:300px">
-            <div style="width:100%;height:100%;" id="map"></div>
-        </div>
+
     </div>
 </div>
 </script>
@@ -124,10 +127,10 @@
     <div class="col-xs-4 text-center">
         <div class="heading">Helmet</div>
         <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input type="radio" onchange="boxClick(this)" name="helmet" value="yes">Yes
             </label>
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input type="radio" onchange="boxClick(this)" name="helmet" value="no">No
             </label>
         </div>
@@ -135,20 +138,20 @@
 
         <div class="heading">Direction</div>
         <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input type="radio" onchange="boxClick(this)" name="direction" value="north">North
             </label>
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input type="radio" onchange="boxClick(this)" name="direction" value="west">West
             </label>
         </div>
 
         <div class="heading">SideWalk</div>
         <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input type="radio" onchange="boxClick(this)" name="sidewalk" value="yes">Yes
             </label>
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input type="radio" onchange="boxClick(this)" name="sidewalk" value="no">No
             </label>
         </div>
@@ -186,10 +189,10 @@
     <div class="col-xs-4 text-center">
         <div class="heading">Gender</div>
         <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input id="btn1" type="radio" onchange="boxClick(this)" name="gender" value="m">M
             </label>
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input id="btn2" type="radio" onchange="boxClick(this)" name="gender" value="f">F
             </label>
         </div>
@@ -198,20 +201,20 @@
 
         <div class="heading">Direction</div>
         <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input type="radio" onchange="boxClick(this)" name="direction" value="south">South
             </label>
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input type="radio" onchange="boxClick(this)" name="direction" value="east">East
             </label>
         </div>
 
         <div class="heading">Wrong Way</div>
         <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input type="radio" onchange="boxClick(this)" name="wrong_way" value="yes">Yes
             </label>
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input type="radio" onchange="boxClick(this)" name="wrong_way" value="no">No
             </label>
         </div>
