Fixed location name.  Refactored data functions

--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -162,7 +162,7 @@
 
     <!--------- CENTER -------->
     <div class="col-xs-4 text-center">
-      Cathy St and 13th St
+      <span>{{location.name}}</span>
       <br>
       Total Riders: <span id="total_riders"></span>
       <br>
@@ -299,7 +299,7 @@
 <div>
     <div class="row appcontainer">
         <div class="col-xs-10 col-md-offset-1">
-            <button class="btn btn-primary" onclick="window.location.replace('#home')">&laquo;Home</button>
+            <button class="btn btn-primary" onclick="window.location.replace('#home')">&laquo;&nbsp;Home</button>
             <h3>Finished!  Thank You</h3>
             Show some metrics!
         </div>
