--- a/mobileapp/bikeapp/platforms/ios/www/index.html
+++ b/mobileapp/bikeapp/platforms/ios/www/index.html
@@ -164,7 +164,7 @@
     <div class="col-xs-4 text-center">
       <span>{{location.name}}</span>
       <br>
-      Total Riders: <span id="total_riders"></span>
+      Counted Riders: <span id="total_riders">72</span>
       <br>
       <div id="timer">&nbsp;</div>
 
@@ -299,7 +299,7 @@
 <div>
     <div class="row appcontainer">
         <div class="col-xs-10 col-md-offset-1">
-            <button class="btn btn-primary" onclick="window.location.replace('#home')">&laquo;Home</button>
+            <button class="btn btn-primary" onclick="window.location.replace('#home')">&laquo;&nbsp;Home</button>
             <h3>Finished!  Thank You</h3>
             Show some metrics!
         </div>
