--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -164,7 +164,7 @@
     <div class="col-xs-4 text-center">
       <span>{{location.name}}</span>
       <br>
-      Total Riders: <span id="total_riders"></span>
+      Counted Riders: <span id="total_riders">72</span>
       <br>
       <div id="timer">&nbsp;</div>
 
