--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -6,6 +6,7 @@
     <!--<link href="assets/topcoat/css/topcoat-mobile-light.css" rel="stylesheet">-->
     <link href="assets/bootstrap/bootstrap.css" rel="stylesheet">
     <script type="text/javascript" src="assets/js/jquery.js"></script>
+    <script type="text/javascript" src="assets/js/jquery-ui.min.js"></script>
     <script type="text/javascript" src="assets/bootstrap/bootstrap.js"></script>
     <link href="assets/css/bikecounter.css" rel="stylesheet">
     <!--<link href="assets/css/pageslider.css" rel="stylesheet">-->
@@ -171,7 +172,7 @@
     <div class="col-xs-4 text-center">
       <span>{{location.name}}</span>
       <br>
-      Counted Riders: <span id="total_riders">0</span>
+      <span id="riders_outer">Counted Riders: <span id="total_riders">0</span></span>
       <br>
       <div id="timer">&nbsp;</div>
 
