--- a/mobileapp/bikeapp/platforms/android/assets/www/index.html
+++ b/mobileapp/bikeapp/platforms/android/assets/www/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 <style>
-    body {margin-top:20px;}
+    body {margin-top:10px;}
     .rotate90 {
         -webkit-transform: rotate(90deg);
         -moz-transform: rotate(90deg);
@@ -43,12 +43,12 @@
     <div class="col-xs-3 col-xs-offset-1">
         <img src="assets/img/phlbikeco.png">
     </div>
-    <div class="col-xs-8">
+    <div class="col-xs-8" style="padding-top:5px">
         <input id="username" type="text" class="form-control" value="" placeholder="username" autocapitalize="off">
         <br>
         <input id="password" type="password" class="form-control" value="" placeholder="password">
         <br>
-        <input type="button" id="btn-login" class="btn btn-default" onclick="login()" value="Log In">
+        <input type="button" id="btn-login" class="btn btn-primary" onclick="login()" value="Log In">
         <br><br>
         <div id="err-login" class="alert alert-danger" style="display:none"></p>
         </form>
@@ -72,30 +72,36 @@
 
 <script id="tpl-upcoming" type="text/template">
     <div class="row">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-10 col-md-offset-1" style="padding-bottom: 10px">
             {{#appointment_set.length}}
             <h3 class="topcoat-list__header">{{appointment_set.length}} Appointments</h3>
             {{/appointment_set.length}}
-            <ul class="topcoat-list__container">
                 {{#appointment_set}}
-                <li class="topcoat-list__item clickable">
-                    <a href="#appt/{{id}}">{{location.name}}</a>
-                </li>
+                    <a href="#appt/{{id}}">{{location.name}}</a><br>
                 {{/appointment_set}}
                 {{^appointment_set}}
                 No scheduled sessions
-                {{/appointment_set}}
-            </ul>
+            {{/appointment_set}}
         </div>
     </div>
 </script>
 
 
 <script id="tpl-appt" type="text/template">
-<div class="row">
-    <div class="col-xs-10 offset-xs-1 text-center">
-        <input type="button" class="btn btn-default" onclick="window.location.replace('#home')" value="&laquo;&nbsp;Home">
-        <h3 class="topcoat-list__header">{{location.name}}</h3>
+<div class="row appcontainer">
+    <div class="col-xs-12 text-center">
+        <div class="row">
+            <span class="col-xs-4 text-left">
+                <input type="button" class="btn btn-primary" onclick="window.location.replace('#home')" value="&laquo;&nbsp;Home">
+            </span>
+            <span class="col-xs-8 text-left">
+                <h3>{{location.name}}</h3>
+            </span>
+        </div>
+        <a href="javascript:startSession({{id}})">Start Recording</a>
+        <div style="width:100%;height:300px">
+            <div style="width:100%;height:100%;" id="map"></div>
+        </div>
             <!--
             <table>
                 <tr>
@@ -107,27 +113,21 @@
                 </tr>
             </table>
             -->
-        <a href="javascript:startSession({{id}})">Start Recording</a>
-        <div style="width:100%;height:300px">
-            <div style="width:100%;height:100%;" id="map"></div>
-        </div>
     </div>
 </div>
 </script>
 
 
 <script id="tpl-record" type="text/template">
-
-
-  <div class="row page" id="page1">
+  <div class="row page appcontainer" id="page1">
     <!-------------- LEFT ------------->
     <div class="col-xs-4 text-center">
         <div class="heading">Helmet</div>
-        <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
+        <div id="btn-test" class="btn-group" data-toggle="buttons">
+            <label class="btn btn-val">
                 <input type="radio" onchange="boxClick(this)" name="helmet" value="yes">Yes
             </label>
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input type="radio" onchange="boxClick(this)" name="helmet" value="no">No
             </label>
         </div>
@@ -135,41 +135,50 @@
 
         <div class="heading">Direction</div>
         <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
+          {{#dirs}}
+          <label class="btn btn-val">
+            <input type="radio" onchange="boxClick(this)" name="direction" value="{{.}}">{{.}}
+          </label>
+          {{/dirs}}
+          <!--
+            <label class="btn btn-val">
                 <input type="radio" onchange="boxClick(this)" name="direction" value="north">North
             </label>
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input type="radio" onchange="boxClick(this)" name="direction" value="west">West
             </label>
+          -->
         </div>
 
         <div class="heading">SideWalk</div>
         <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input type="radio" onchange="boxClick(this)" name="sidewalk" value="yes">Yes
             </label>
-            <label class="btn btn-primary">
-                <input type="radio" onchange="boxClick(this)" name="sidewalk" value="no">No
+            <label class="btn btn-val">
+                <input type="radio" onchange="boxClick(this)" name="sidewalk" data-default="true" value="no">No
             </label>
         </div>
+        <!--
         <div><br>
             <input type="button" class="btn btn-primary btn-block" value="page2" onclick="showPage('2')">
         </div>
+        -->
     </div>
 
 
     <!--------- CENTER -------->
     <div class="col-xs-4 text-center">
-      Cathy St and 13th St
+      <span>{{location.name}}</span>
       <br>
-      Total Riders: <span id="total_riders"></span>
+      Counted Riders: <span id="total_riders">0</span>
       <br>
       <div id="timer">&nbsp;</div>
 
       <br>
       <input type="button" class="btn btn-primary" value="Pause" onclick="showPage('2')">
       <br>
-      <input style="margin-top:5px;" type="button" class="btn btn-primary" value="End Session" onclick="showPage('2')">
+      <input style="margin-top:5px;" type="button" class="btn btn-primary" value="End Session" onclick="endSession()">
 
       <!--
       <input type="button" class="btn btn-primary" value="Page 2" onclick="showPage('2')">
@@ -186,33 +195,23 @@
     <div class="col-xs-4 text-center">
         <div class="heading">Gender</div>
         <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input id="btn1" type="radio" onchange="boxClick(this)" name="gender" value="m">M
             </label>
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input id="btn2" type="radio" onchange="boxClick(this)" name="gender" value="f">F
             </label>
         </div>
 
         <div class="clearfix"></div>
 
-        <div class="heading">Direction</div>
-        <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
-                <input type="radio" onchange="boxClick(this)" name="direction" value="south">South
-            </label>
-            <label class="btn btn-primary">
-                <input type="radio" onchange="boxClick(this)" name="direction" value="east">East
-            </label>
-        </div>
-
         <div class="heading">Wrong Way</div>
         <div class="btn-group" data-toggle="buttons">
-            <label class="btn btn-primary">
+            <label class="btn btn-val">
                 <input type="radio" onchange="boxClick(this)" name="wrong_way" value="yes">Yes
             </label>
-            <label class="btn btn-primary">
-                <input type="radio" onchange="boxClick(this)" name="wrong_way" value="no">No
+            <label class="btn btn-val">
+                <input type="radio" onchange="boxClick(this)" name="wrong_way" data-default="true" value="no">No
             </label>
         </div>
         <div><br>
@@ -295,16 +294,25 @@
 
 <script id="tpl-done" type="text/template">
 <div>
-    <div class="topcoat-navigation-bar">
-        <div class="topcoat-navigation-bar__item left quarter">
-            <button class="topcoat-button" onclick="window.location.replace('#home')">&laquo;Home</button>
+    <div class="row appcontainer">
+        <div class="col-xs-10 col-md-offset-1">
+            <button class="btn btn-primary" onclick="window.location.replace('#home')">&laquo;&nbsp;Home</button>
+            <h3>Finished!  Thank You</h3>
+            Show some metrics!
         </div>
     </div>
-    <div style="margin:10px auto;text-align:center">
-        <h3 class="topcoat-list__header">Finished!  Thank You</h3>
-        Show some metrics!
-    </div>
 </div>
+</script>
+
+<script id="tpl-help" type="text/template">
+    <div>
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                <a href="#help">Help</a><br>
+                Help content
+            </div>
+        </div>
+    </div>
 </script>
 
 
