Added street names as direction selection.  Allow more than 2 appt signups

--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -168,10 +168,10 @@
             <div class="heading">Direction</div>
             <div class="btn-group" data-toggle="buttons">
                 <label class="btn btn-val">
-                    <input type="radio" onchange="boxClick(this)" name="direction" value="{{location.direction1}}">{{location.direction1}}
+                    <input type="radio" onchange="boxClick(this)" name="direction" value="1">{{location.direction1}}
                 </label>
                 <label class="btn btn-val">
-                    <input type="radio" onchange="boxClick(this)" name="direction" value="{{location.direction2}}">{{location.direction2}}
+                    <input type="radio" onchange="boxClick(this)" name="direction" value="2">{{location.direction2}}
                 </label>
               <!--
               {{#dirs}}
