--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -75,11 +75,10 @@
 <script id="tpl-upcoming" type="text/template">
     <div class="row">
         <span class="col-xs-4 text-left">
-            <input type="button" class="btn btn-primary" onclick="window.location.replace('#home')" value="&laquo;&nbsp;Home">
+            <input type="button" class="btn btn-primary btn-nav" onclick="window.location.replace('#home')" value="&laquo;&nbsp;Home">
         </span>
         <span class="col-xs-8 text-left">
             <h3>{{location.name}}</h3>
-            Need to show some stats about the session, simple counts graphs etc
         </span>
     </div>
     <div class="row">
@@ -105,7 +104,7 @@
         <div class="col-xs-12 text-center">
             <div class="row">
             <span class="col-xs-4 text-left">
-                <input type="button" class="btn btn-primary" onclick="window.location.replace('#home')" value="&laquo;&nbsp;Home">
+                <input type="button" class="btn btn-primary btn-nav" onclick="window.location.replace('#home')" value="&laquo;&nbsp;Home">
             </span>
             <span class="col-xs-8 text-left">
                 <h3>{{location.name}}</h3>
@@ -122,7 +121,7 @@
     <div class="col-xs-12 text-center">
         <div class="row">
             <span class="col-xs-4 text-left">
-                <input type="button" class="btn btn-primary" onclick="window.location.replace('#home')" value="&laquo;&nbsp;Home">
+                <input type="button" class="btn btn-primary btn-nav" onclick="window.location.replace('#home')" value="&laquo;&nbsp;Home">
             </span>
             <span class="col-xs-8 text-left">
                 <h3>{{location.name}}</h3>
@@ -215,11 +214,10 @@
       <span id="riders_outer">Counted Riders: <span id="total_riders">0</span></span>
       <br>
       <div id="timer">&nbsp;</div>
+      <br>
 
-      <br>
       <input id="btn_pause" type="button" class="btn btn-primary" value="Pause" onclick="pause()">
-      <br>
-      <input style="margin-top:5px;" id="btn_end" type="button" class="btn btn-primary" value="End Session" onclick="endSession()">
+      <input style="" id="btn_end" type="button" class="btn btn-primary" value="End" onclick="endSession()">
 
       <!--
       <input type="button" class="btn btn-primary" value="Page 2" onclick="showPage('2')">
@@ -228,7 +226,26 @@
       <br>
       <input type="button" class="btn btn-primary" id="submit_survey" value="Submit" onclick="submitSurvey()">
       -->
-    </div>
+      <div class="row text-center" style="padding-top:15px">
+          <table class="table">
+              <tr>
+                  {{#org.organizationevents_set}}
+                  <td>{{event.name}}</td>
+                  {{/org.organizationevents_set}}
+              </tr>
+              <tr>
+                  {{#org.organizationevents_set}}
+                  <!-- TODO - test the events buttons -->
+                  <td>
+                      <button class="btn btn-event" onclick="saveEvent({{event.id}})">+ 1</button>
+                      <span class="badge" id="eventcount_{{event.id}}">0</span>
+                  </td>
+                  {{/org.organizationevents_set}}
+              </tr>
+          </table>
+      </div>
+          <!--<img class="img-event" src="assets/img/event_{{event.system_name}}.png">-->
+    </div><!-- CENTER -->
 
 
 
@@ -360,7 +377,7 @@
 <div>
     <div class="row appcontainer">
         <div class="col-xs-10 col-md-offset-1">
-            <button class="btn btn-primary" onclick="window.location.replace('#home')">&laquo;&nbsp;Home</button>
+            <button class="btn btn-primary btn-nav" onclick="window.location.replace('#home')">&laquo;&nbsp;Home</button>
             <h3>Finished!  Thank You</h3>
         </div>
     </div>
