--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -62,7 +62,7 @@
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
             <h4>Let's Get Started</h4>
-            <a href="#upcoming">Upcoming Appts</a>
+            <a href="#upcoming">Appointments</a>
             <br>
             <a href="#help">Help</a>
             <br>
