--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -62,6 +62,7 @@
     <div class="row">
         <div class="col-md-10 col-md-offset-1">
             <h4>Let's Get Started</h4>
+            session len {{
             <a href="#upcoming">Appointments</a>
             <br>
             <a href="#help">Help</a>
@@ -388,6 +389,8 @@
     <div>
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
+                <button class="btn btn-primary btn-nav" onclick="window.location.replace('#home')">&laquo;&nbsp;Home</button>
+                <br><br>
                 <a href="#help">Help</a><br>
                 Help content
             </div>
